# snake

./: README.md  pyproject.toml
src/snake/: main.py
